# skoll

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/skoll/: __init__.py  config.py  constants.py  errors.py  exceptions.py  helpers.py  i18n.py  nats.py  postgresql.py  result.py  spicedb.py
src/skoll/application/: __init__.py  i18n.py  ipinfo.py  protocols.py  send_email.py  tokens.py  types.py
src/skoll/domain/: __init__.py  base.py  enums.py  message.py  messaging.py  objects.py  ports.py  primitives.py  typing.py
src/skoll/domain/primitives/: __init__.py  object.py
src/skoll/infras/: __init__.py  postgresql.py  spicedb.py
src/skoll/infras/mediator/: __init__.py  basic.py  nats.py  utils.py
src/skoll/utils/: __init__.py  dep_injection.py  functional.py
